--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,8 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.29)
 project(PSO)
 
 set(CMAKE_CXX_STANDARD 20)
-
-set(GTEST_ROOT /usr/src/gtest)
-set(GTEST_INCLUDE_DIR ${GTEST_ROOT}/include)
-set(GTEST_LIBRARY ${GTEST_ROOT}/lib/libgtest.a)
-set(GTEST_MAIN_LIBRARY ${GTEST_ROOT}/lib/libgtest_main.a)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Find OpenMP
 find_package(OpenMP)
@@ -20,45 +16,60 @@ else()
 endif()
 
 # Set debug flags
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -O0 -v -g")
 
 # Include directories
 include_directories(include)
 
 # Source files
-file(GLOB SOURCES "src/*.cpp")
-
-# Remove main.cpp from SOURCES
-list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
+set(SOURCES 
+  src/Swarm.cpp
+  src/PSO.cpp
+  src/OrbitProblem.cpp
+  src/OrbitTransfer.cpp
+)
+message(STATUS "Source Files: ${SOURCES}")
 
 add_library(PSO_lib ${SOURCES})
 
 # Main executable
 add_executable(PSO_EXEC src/main.cpp)
+
 target_link_libraries(PSO_EXEC PRIVATE PSO_lib)
+message(STATUS "PSO_EXEC link command: ${CMAKE_CXX_LINK_EXECUTABLE}")
+
+set_target_properties(PSO_lib PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 # Link OpenMP if found
 target_link_libraries(PSO_EXEC PRIVATE
-    $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>
-)
+    $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 
 # Testing
 enable_testing()
-find_package(GTest REQUIRED)
-if(GTest_FOUND)
-    message("-- Google Test was found")
-    include_directories(${GTEST_INCLUDE_DIRS})
+find_package(Catch2 REQUIRED)
+if(Catch2_FOUND)
+    message("-- Catch2 was found")
 
     # Add test executable
-    file(GLOB TEST_SOURCES "tests/*.cpp")
-    add_executable(run_tests ${TEST_SOURCES})
+    set(TEST_SOURCES 
+      tests/test_particle.cpp
+      tests/test_swarm.cpp
+      tests/test_PSO.cpp
+      tests/test_OrbitProblem.cpp
+      tests/test_OrbitTransfer.cpp
+    )
+  message(STATUS "Test source Files: ${TEST_SOURCES}")
 
-    # Link test executable with Google Test and main project
-    target_link_libraries(run_tests PRIVATE
-      ${GTEST_BOTH_LIBRARIES} pthread PSO_lib)
-
+  add_executable(run_tests ${TEST_SOURCES})
+  
+  target_link_libraries(run_tests PRIVATE PSO_lib)
+  target_link_libraries(run_tests PRIVATE Catch2::Catch2WithMain)
+  message(STATUS "run_tests link command: ${CMAKE_CXX_LINK_EXECUTABLE}")
+  
     # Add tests
-    add_test(NAME PSO_tests COMMAND run_tests)
+    include(Catch)
+    catch_discover_tests(run_tests)
+
 else()
-    message(FATAL_ERROR "Google Test not found. Please install it.")
+  message(FATAL_ERROR "Catch2 was not found. Please install it.")
 endif()
