--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,20 @@ else()
 endif()
 
 # ------------------------------------------------------------------------------------------------------
+# Find OpenGL
+find_package(OpenGL REQUIRED)
+if(OpenMP_CXX_FOUND)
+    message("-- OpenGL was found")
+    find_path(GLM_INCLUDE_DIR glm/glm.hpp)
+    find_path(GLFW_INCLUDE_DIR GLFW/glfw3.h)
+    find_library(GLFW_LIBRARY NAMES glfw glfw3)
+    # Set path to GLAD
+    set(GLAD_SRC ${CMAKE_SOURCE_DIR}/glad/src/glad.c)
+else()
+    message("-- OpenGL not found. Please install OpenGL")
+endif()
+
+# ------------------------------------------------------------------------------------------------------
 # Set debug flags
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -O0 -g")
 
@@ -27,77 +41,46 @@ set(SOURCES
   src/PSO.cpp
   src/OrbitProblem.cpp
   src/Logger.cpp
-  src/rendering/Animation.cpp
-  src/rendering/Camera.cpp
-  src/rendering/ImpulseVisu.cpp
-  src/rendering/OrbitModel.cpp
-  src/rendering/RenderEngine.cpp
-  src/rendering/Shader.cpp
-  src/rendering/TransferModel.cpp
+  rendering/src/Animation.cpp
+  rendering/src/Camera.cpp
+  rendering/src/ImpulseModel.cpp
+  rendering/src/OrbitModel.cpp
+  rendering/src/Shader.cpp
+  rendering/src/TransferModel.cpp
 )
 
 # Include directories
 include_directories(include)
+include_directories(rendering/include)
+include_directories(glad/include)
 add_library(PSO_lib ${SOURCES})
 
 # Main executable
 add_executable(main src/main.cpp)
 
 # Secondary rendering executable
-add_executable(rendering src/rendering/main.cpp)
+add_executable(rendering 
+    rendering/src/main.cpp
+    ${GLAD_SRC}  # Add the GLAD implementation
+)
 
 target_link_libraries(main PRIVATE PSO_lib)
 target_link_libraries(rendering PRIVATE PSO_lib)
 
-# Link OpenMP if found
+# Link OpenMP
 target_link_libraries(main PRIVATE $<$<BOOL:${OpenMP_CXX_FOUND}>:OpenMP::OpenMP_CXX>)
 
 # Link OpenGL and GLFW
-#set(OPENGL_INCLUDE_DIR "/nix/store/v9hsgy7dqyax5darjiqdn1ikmswwn6f2-orb-pso-tools/include")
-#set(OPENGL_opengl_LIBRARY "/nix/store/v9hsgy7dqyax5darjiqdn1ikmswwn6f2-orb-pso-tools/libGL.so")
-#set(OPENGL_glx_LIBRARY "/nix/store/v9hsgy7dqyax5darjiqdn1ikmswwn6f2-orb-pso-tools/libGLX.so")
-
-find_library(OPENGL_opengl_LIBRARY 
-    NAMES GL
-    PATHS "/nix/store/v9hsgy7dqyax5darjiqdn1ikmswwn6f2-orb-pso-tools"
-    PATH_SUFFIXES lib
-    NO_DEFAULT_PATH
-)
-
-find_library(OPENGL_glx_LIBRARY 
-    NAMES GLX
-    PATHS "/nix/store/v9hsgy7dqyax5darjiqdn1ikmswwn6f2-orb-pso-tools"
-    PATH_SUFFIXES lib
-    NO_DEFAULT_PATH
-)
-
-find_path(OPENGL_INCLUDE_DIR 
-    NAMES GL/gl.h
-    PATHS "/nix/store/knm44q1srs7pb36ywvjzqjv2yc4axkg9-libglvnd-1.7.0-dev/include"
-    PATH_SUFFIXES include
-    NO_DEFAULT_PATH
-)
-
-find_package(OpenGL REQUIRED)
-
-find_path(GLM_INCLUDE_DIR glm/glm.hpp
-    PATHS "/nix/store/jhvm19kxzfkb2jqhqkcflp29dbsff96p-glm-1.0.1/include"
-    NO_DEFAULT_PATH
-)
 include_directories(${GLM_INCLUDE_DIR})
+include_directories(${GLFW_INCLUDE_DIR})
 
-set(GLFW3_INCLUDE_DIR "/nix/store/pihqjg71r401r8z5wf6j4hx3dv69cbqv-glfw-3.4/include")
-find_library(GLFW3_LIBRARY 
-    NAMES glfw glfw3
-    PATHS "/nix/store/pihqjg71r401r8z5wf6j4hx3dv69cbqv-glfw-3.4/lib"
-    NO_DEFAULT_PATH
+target_include_directories(rendering PRIVATE 
+    ${CMAKE_SOURCE_DIR}/glad/include
 )
-include_directories(${GLFW3_INCLUDE_DIR})
 
 target_link_libraries(rendering PRIVATE
   ${OPENGL_LIBRARIES} 
-  ${GLFW3_LIBRARY}
-  PSO_lib
+  glfw
 )
 
 # ------------------------------------------------------------------------------------------------------
